pagination layout update

--- a/style.less
+++ b/style.less
@@ -1061,19 +1061,21 @@ div.bSideItem {
 	li span, li a {
 			border-radius: 4px;
 			font-size: 13px;
-			padding: 6px 12px;
+			padding: 10px 12px;
 			margin-right: 4px;
 			margin-bottom: 4px;
 	}
 }
 
-@media (min-width: 1025px) {
-	.pagination {
-		li span, li a {
-			padding: 10px 16px;
-		}
-	}
-}
+// @media (min-width: 1025px) {
+	// .pagination {
+		// li span, li a {
+			// padding: 10px 0;
+			// text-align: center;
+			// width: 42px;
+		// }
+	// }
+// }
 
 // Messages
 div.action_messages, div.log_container {
