Update widget containers code for proper editing on customizer designer mode

--- a/less/_responsive.module.less
+++ b/less/_responsive.module.less
@@ -88,7 +88,7 @@
 }
 
 @media (max-width: 992px) {
-	.evo_container__sidebar, .evo_container__sidebar2 {
+	.evo_container__sidebar, .evo_container__sidebar_2 {
 		margin-top: 80px;
 		.widget_plugin_evo_Calr table {
 			max-width: 320px;
