--- a/style.less
+++ b/style.less
@@ -1391,7 +1391,7 @@ main {
 }
 
 // Sidebar widgets
-.evo_container__sidebar, .evo_container__sidebar2 {
+.evo_container__sidebar, .evo_container__sidebar_2 {
 	padding: 0;
 	.widget_core_coll_post_list, 
 	.widget_core_coll_comment_list, 
@@ -1410,7 +1410,7 @@ main {
 	}
 }
 @media (min-width: 768px) {
-	.evo_container__sidebar, .evo_container__sidebar2 {
+	.evo_container__sidebar, .evo_container__sidebar_2 {
 		padding: 0 20px;
 	}
 }
